Fix gap banner logo

--- a/Practice02/src/style/sass/components/_banner-logo.scss
+++ b/Practice02/src/style/sass/components/_banner-logo.scss
@@ -2,7 +2,7 @@
   justify-content: space-evenly;
   margin-top: 13px;
   display: flex;
-  gap: 32git px;
+  gap: 32px;
   margin-left: 19px;
 }
 
